# DB_Huggy

./: Dockerfile  README.md  docker-compose.yml  env_example  pyproject.toml
src/: database.db  main.py  request.py
src/API/: get_data.py  get_data_update.py  request.py
src/Database/: commit.py  database.py  models.py
